--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -16,6 +16,10 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+.month-container {
+  height: 100%;
+}
+
 .month-grid {
   display: flex;
   width: 100%;
@@ -29,6 +33,7 @@
   height: 2em;
   align-items: stretch;
   flex: 0 0 0%;
+  text-align: center;
 }
 
 .month-grid-day-header-column {
@@ -44,16 +49,43 @@
 }
 
 .month-grid-day-column {
-  border-collapse: collapse;
   flex: 1 1 0%;
+  border: solid 1px lightgrey;
+  border-collapse: collapse;
+
+  .mat-flat-button {
+    background-color: transparent;
+  }
 }
 
 .month-grid-day-column--previous-month,
 .month-grid-day-column--next-month {
-  background: lightgray;
+  background: #f1f1f1;
 }
 
 .month-grid-day-column--selected-date {
-  border: solid 1px blue;
+  .month-grid-day-column-label-button {
+    background: #3f51b5;
+    border-radius: 6px;
+    color: white;
+  }
 }
 
+.month-grid-day-column--today.month-grid-day-column--selected-date {
+  .month-grid-day-column-label-button {
+    box-shadow: inset 0 0 0 1px white;
+    border-color: #3f51b5;
+  }
+}
+
+.month-grid-day-column--today {
+  .month-grid-day-column-label-button {
+    border: solid 1px rgba(0, 0, 0, 0.38);
+    border-radius: 6px;
+  }
+}
+
+.month-grid-day-column-label {
+  padding: 4px 0;
+  text-align: center;
+}
