--- a/src/app/pages/week/week.component.scss
+++ b/src/app/pages/week/week.component.scss
@@ -16,3 +16,93 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+.week-calendar-container {
+  height: 100%;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: min-content auto;
+  grid-template-areas:
+    "toolbar"
+    "calendar";
+  grid-gap: 16px;
+}
+
+.week-toolbar {
+  grid-area: toolbar;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.week-calendar {
+  grid-area: calendar;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.week-calendar-header-row {
+  display: flex;
+  flex: none;
+  height: 2em;
+  align-items: stretch;
+  flex: 0 0 0%;
+  text-align: center;
+}
+
+.week-calendar-header-column {
+  flex: 1 1 0%;
+}
+
+.week-calendar-row {
+  display: flex;
+  flex: none;
+  height: 2em;
+  align-items: stretch;
+  flex: 1 1 0%;
+}
+
+.week-calendar-column {
+  flex: 1 1 0%;
+  border: solid 1px lightgrey;
+  border-collapse: collapse;
+
+  .mat-flat-button {
+    background-color: transparent;
+  }
+}
+
+.week-calendar-column--previous-week,
+.week-calendar-column--next-week {
+  background: #f1f1f1;
+}
+
+.week-calendar-column--selected-date {
+  .week-calendar-column-label-button {
+    background: #3f51b5;
+    border-radius: 6px;
+    color: white;
+  }
+}
+
+.week-calendar-column--today {
+  &.week-calendar-column--selected-date {
+    .week-calendar-column-label-button {
+      box-shadow: inset 0 0 0 1px white;
+      border-color: #3f51b5;
+    }
+  }
+}
+
+.week-calendar-column--today {
+  .week-calendar-column-label-button {
+    border: solid 1px rgba(0, 0, 0, 0.38);
+    border-radius: 6px;
+  }
+}
+
+.week-calendar-column-label {
+  padding: 4px 0;
+  text-align: center;
+}
