--- a/src/app/pages/day/day.component.scss
+++ b/src/app/pages/day/day.component.scss
@@ -16,3 +16,100 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
+.day-calendar-container {
+  height: 100%;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: min-content auto;
+  grid-template-areas:
+    "toolbar"
+    "calendar";
+  grid-gap: 16px;
+}
+
+.day-toolbar {
+  grid-area: toolbar;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 700px;
+  justify-self: center;
+  width: 100%;
+}
+
+.day-calendar {
+  grid-area: calendar;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.day-calendar-header-row {
+  display: flex;
+  height: 2em;
+  align-items: stretch;
+  text-align: center;
+}
+
+.day-calendar-rows {
+  position: relative;
+  flex: 1 1 0%;
+  max-height: 1400px;
+}
+
+.day-calendar-row-lines {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  border-top: solid 1px lightgrey;
+}
+
+.day-calendar-row-line {
+  flex: 1 1 0%;
+  border-bottom: solid 1px lightgrey;
+  border-collapse: collapse;
+  position: relative;
+}
+
+.day-calendar-timezone {
+  position: absolute;
+  bottom: 100%;
+  margin-bottom: -0.65rem;
+  background: white;
+}
+
+.day-calendar-row-time {
+  position: absolute;
+  top: 100%;
+  margin-top: -0.75rem;
+  margin-left: 0.5rem;
+  background: white;
+}
+
+.day-calendar-columns-line {
+  position: absolute;
+  top: 0;
+  left: 5em;
+  width: 0;
+  height: 100%;
+  border-right: solid 1px lightgrey;
+}
+
+.day-calendar-current-time-indicator {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0;
+  border-bottom: solid 1px orangered;
+}
+
+.day-calendar-current-time {
+  position: absolute;
+  color: orangered;
+  top: -0.75rem;
+  left: 0.5rem;
+  background: white;
+  min-width: 2.5em;
+}
