--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -32,6 +32,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 700px;
+  justify-self: center;
+  width: 100%;
 }
 
 .month-calendar {
@@ -44,10 +47,8 @@
 
 .month-calendar-header-row {
   display: flex;
-  flex: none;
   height: 2em;
   align-items: stretch;
-  flex: 0 0 0%;
   text-align: center;
 }
 
