--- a/src/app/pages/week/week.component.html
+++ b/src/app/pages/week/week.component.html
@@ -22,16 +22,31 @@
 
     <div class="week-calendar">
       <div class="week-calendar-header-row">
-        <div class="week-calendar-header-column" *ngFor="let column of dates">
-          <button mat-flat-button class="week-calendar-column-label-button" [routerLink]="'/day/' + (column.date | date : 'yyyy-MM-dd')">
+        <div class="week-calendar-header-column" *ngFor="let column of dates"
+             [class.week-calendar-header-column--selected-date]="+column.date === +selectedDate"
+             [class.week-calendar-header-column--today]="+column.date === +today">
+          <button mat-flat-button class="week-calendar-header-column-button" [routerLink]="'/day/' + (column.date | date : 'yyyy-MM-dd')">
             {{ column.date | date: 'cccccc d' }}
           </button>
         </div>
       </div>
       <div class="week-calendar-row">
+        <div class="week-calendar-row-lines">
+          <div class="week-calendar-row-line" *ngFor="let hour of hours | async; let i = index">
+            <div class="week-calendar-timezone" *ngIf="i === 0">{{ hour | date : 'zzz' }}</div>
+            <div class="week-calendar-row-time" *ngIf="i < 23">{{ hour | date: 'shortTime' }}</div>
+          </div>
+        </div>
         <div class="week-calendar-column" *ngFor="let column of dates"
              [class.week-calendar-column--selected-date]="+column.date === +selectedDate"
              [class.week-calendar-column--today]="+column.date === +today">
+          <ng-container *ngIf="+column.date === +today">
+            <div class="week-calendar-current-time-indicator" [style.top]="timeLinePerc | async">
+              <div class="week-calendar-current-time">
+                {{ (this.currentTime | async) | date: 'shortTime' }}
+              </div>
+            </div>
+          </ng-container>
         </div>
       </div>
     </div>
