--- a/src/app/pages/day/day.component.scss
+++ b/src/app/pages/day/day.component.scss
@@ -38,10 +38,12 @@
 }
 
 .day-calendar {
+  position: relative;
   grid-area: calendar;
   display: flex;
   width: 100%;
   height: 100%;
+  max-height: 1400px;
   flex-direction: column;
 }
 
@@ -53,9 +55,12 @@
 }
 
 .day-calendar-rows {
-  position: relative;
-  flex: 1 1 0%;
-  max-height: 1400px;
+  position: absolute;
+  pointer-events: none;
+  top: 2em;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .day-calendar-row-lines {
@@ -67,7 +72,7 @@
 }
 
 .day-calendar-row-line {
-  flex: 1 1 0%;
+  flex: 1 1 0;
   border-bottom: solid 1px lightgrey;
   border-collapse: collapse;
   position: relative;
@@ -105,6 +110,13 @@
   border-bottom: solid 1px orangered;
 }
 
+.day-calendar-hour {
+  flex: 1 1 0;
+  padding: 4px 6px;
+  position: relative;
+  margin-left: 6em;
+}
+
 .day-calendar-current-time {
   position: absolute;
   color: orangered;
@@ -112,4 +124,52 @@
   left: 0.5rem;
   background: white;
   min-width: 2.5em;
+}
+
+.day-calendar-item {
+  position: absolute;
+
+  &:nth-child(2) { margin-left: 250px; }
+  &:nth-child(3) { margin-left: 500px; }
+  &:nth-child(4) { margin-left: 750px; }
+  &:nth-child(5) { margin-left: 1000px; }
+  &:nth-child(6) { margin-left: 1250px; }
+  &:nth-child(7) { margin-left: 1500px; }
+  &:nth-child(8) { margin-left: 1750px; }
+  &:nth-child(9) { margin-left: 2000px; }
+  &:nth-child(10) { margin-left: 2250px; }
+
+  width: 250px;
+  background: white;
+
+  &:focus, &:hover {
+    z-index: 1;
+  }
+}
+
+.day-calendar-item-block {
+  display: inline-block;
+  margin-right: 5px;
+  padding: 2px 5px;
+  color: white;
+  white-space: nowrap;
+  font-weight: bold;
+
+  .day-calendar-item-network--polkadot & {
+    background: #FF6482;
+  }
+
+  .day-calendar-item-network--kusama & {
+    background: #333;
+  }
+}
+
+.day-calendar-item-time {
+  display: inline-block;
+  margin-right: 5px;
+  padding: 2px 5px;
+  border-radius: 6px;
+  background: lightgray;
+  color: black;
+  white-space: nowrap;
 }
