--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@
   --ps-top-bar-text-color: #FFF;
   --ps-top-bar-logo-text-color: #FFF;
   --ps-top-bar-logo-dot-color: #FF6482;
+  --ps-date-picker-event: #cf25ff;
   --ps-grid-column-padding: 10px;
   --ps-badge-good-color: #008000;
   --ps-badge-bad-color: #8b0000;
