Added Acala to the mix, tested by adding it to local config file.
Co-authored-by: kriekkop <287479+Kriekkop@users.noreply.github.com>

--- a/src/app/pages/day/day.component.scss
+++ b/src/app/pages/day/day.component.scss
@@ -162,6 +162,10 @@
   .day-calendar-item-network--kusama & {
     background: #333;
   }
+
+  .day-calendar-item-network--acala & {
+    background: #645aff;
+  }
 }
 
 .day-calendar-item-time {
