--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -143,6 +143,10 @@
   .month-calendar-item-network--kusama & {
     background: #333;
   }
+
+  .month-calendar-item-network--acala & {
+    background: #645aff;
+  }
 }
 
 .month-calendar-item-time {
