--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -39,6 +39,7 @@
       <div class="pages-legend">
         <div class="pages-legend-item pages-legend-item--polkadot">Polkadot</div>
         <div class="pages-legend-item pages-legend-item--kusama">Kusama</div>
+        <div class="pages-legend-item pages-legend-item--acala">Acala</div>
       </div>
     </div>
   </div>
